--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     }
 
     .no-fill path {
-      fill : #BD906F;
+      /*fill : #BD906F;*/
+      fill : transparent;
       border : none;
     }
 
@@ -97,10 +98,13 @@
       pointer-events: auto;
     }
     #slider div , .noUi-marker{
-      color: #D4877F;
+      color: blue;
     }
     #slider .noUi-marker {
-      background: #D4877F
+      background: blue;
+    }
+    #slider .noUi-handle {
+      background: cyan;
     }
 
     .tooltip {
@@ -200,15 +204,29 @@
     // add zoom controls
     L.control.zoom({ position:'topright' }).addTo(map);
 
-    let url = 'http://tile.thunderforest.com/transport/{z}/{x}/{y}.png'
-    let attribution = '&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    // let url = 'http://tile.thunderforest.com/transport/{z}/{x}/{y}.png'
+     let url = 'http://{s}.tile.opentopomap.org/{z}/{x}/{y}.png'
+     let attribution = '&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 
-    const tiles = L.tileLayer(url, {
+    // var NASAGIBS_ViirsEarthAtNight2012 = L.tileLayer('http://map1.vis.earthdata.nasa.gov/wmts-webmerc/VIIRS_CityLights_2012/default/{time}/{tilematrixset}{maxZoom}/{z}/{y}/{x}.{format}', {
+    // 	attribution: 'Imagery provided by services from the Global Imagery Browse Services (GIBS), operated by the NASA/GSFC/Earth Science Data and Information System (<a href="https://earthdata.nasa.gov">ESDIS</a>) with funding provided by NASA/HQ.',
+    // 	bounds: [[-85.0511287776, -179.999999975], [85.0511287776, 179.999999975]],
+    // 	minZoom: 1,
+    // 	maxZoom: 8,
+    // 	format: 'jpg',
+    // 	time: '',
+    // 	tilematrixset: 'GoogleMapsCompatible_Level'
+    // });
+
+    const tiles =
+    // NASAGIBS_ViirsEarthAtNight2012
+    L.tileLayer(url, {
         attribution: attribution,
         minZoom: 0,
       	maxZoom: 20,
       	ext: 'png'
     })
+    .addTo(map)
 
 
     // create d3 map layout from leaflet
@@ -238,6 +256,7 @@
     d3.queue()
       // map created from https://geojson-maps.kyd.com.au/
       .defer(d3.json, "data/europe.geo.json")
+      // .defer(d3.json, "data/custom.geo.json")
       // capitals at https://www.npmjs.com/package/capitals-coordinates
       .defer(d3.json, "data/europe-capitals.geo.json")
       // name and colors for the caption
